@@ -1,5 +1,9 @@
 2005-02-07  Jonathan Pryor  <jonpryor@vt.edu>
 
+	* grp.c: Oops.  Didn't see other Solaris fix in #72292.
+
+2005-02-07  Jonathan Pryor  <jonpryor@vt.edu>
+
 	* grp.c, pwd.c: Clear errno before calling the actual calls, as errno may
 	  have a stale value, leading to spurious errors later.  Fixes #72292.
 
